wordpress/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"wordpress-mysql"}]'
  labels:
    app: wordpress
    app.kubernetes.io/part-of: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: wordpress
        tier: frontend
    spec:
      containers:
      - image: bitnami/wordpress:6
        name: wordpress
        ports:
        - containerPort: 8080
          name: wordpress
        volumeMounts:
        - mountPath: /var/www/html
          name: html
      volumes:
      - name: html
        emptyDir: {}
